plugins {
	id 'org.springframework.boot' version '2.7.3'
	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
	id 'java'
	id "java-test-fixtures"
}

group = 'app'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	/*
	* 의존성은 다음과 같은 순서로 추가했습니다.
	* 컴파일, 런타임, 어노테이션, 테스트컴파일
	*/
	// h2
	testImplementation 'com.h2database:h2:2.1.214'

	// mysql
	implementation 'mysql:mysql-connector-java:8.0.30'

	// spring-starter
	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.5'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.7.5'

	// mybatis
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

}

tasks.named('test') {
	useJUnitPlatform()
}